tests/negative/regression/r34.orng
// r34.orng:6:17: error: expected a type
//     let a: &main = 4
//                ^
// 
fn main() -> Int {
    let a: &main = 4
} 
